force-app/main/default/objects/iManageDocumentSettings__c/iManageDocumentSettings__c.object-meta.xml
<CustomObject>
    <label>iManage Document Settings</label>
    <nameField>
        <label>iManageDocumentsSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iManage Document Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>