force-app/main/default/objects/iManageDocumentSettings__c/fields/ClassCaption__c.field-meta.xml
<CustomField>
    <fullName>ClassCaption__c</fullName>
    <description>ClassCaption Field</description>
    <label>ClassCaptionField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>