force-app/main/default/objects/iManageDocumentSettings__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>