force-app/main/default/objects/iManageDocumentSettings__c/fields/Intake_Document__c.field-meta.xml
<CustomField>
    <fullName>Intake_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Document</label>
    <type>Checkbox</type>
</CustomField>