force-app/main/default/objects/iManageDocumentSettings__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matter</label>
    <type>Checkbox</type>
</CustomField>