force-app/main/default/objects/iManageDocumentSettings__c/fields/Matter_Document__c.field-meta.xml
<CustomField>
    <fullName>Matter_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matter Note</label>
    <type>Checkbox</type>
</CustomField>