force-app/main/default/objects/iManageDocumentSettings__c/fields/Save_Document__c.field-meta.xml
<CustomField>
    <fullName>Save_Document__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Document</label>
    <type>Checkbox</type>
</CustomField>