force-app/main/default/objects/iManageDocumentSettings__c/fields/Save_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Save_Folder_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Folder Link</label>
    <type>Checkbox</type>
</CustomField>