force-app/main/default/objects/iManageDocumentSettings__c/fields/Save_Link__c.field-meta.xml
<CustomField>
    <fullName>Save_Link__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Link</label>
    <type>Checkbox</type>
</CustomField>