force-app/main/default/objects/iManageDocumentSettings__c/fields/SubClassCaption__c.field-meta.xml
<CustomField>
    <fullName>SubClassCaption__c</fullName>
    <description>SubClassCaption Field</description>
    <label>SubClassCaptionField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>