force-app/main/default/objects/iManageDocumentSettings__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task</label>
    <type>Checkbox</type>
</CustomField>